--- a/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
@@ -1,57 +1,48 @@
 [TIME]
 //Simulation start date，[UTC]
-StartYMDHMS=2020/04/01 11:00:00.0
+StartYMDHMS=2020/01/01 11:00:00.0
 //Simulation finish time，[sec]
 EndTimeSec=300
 //Simulation step time，[sec]
 StepTimeSec=0.1
 //Orbit propagate step time, [sec]
 OrbitPropagateStepTimeSec=0.1
-//Log Output Period，LogPeriod*StepTimeSec -> [sec]
+//Log Output Period，log_period*sim_step_sec -> [sec]
 LogPeriod = 10
 //Simulation speed. 0: as fast as possible, 1: real-time, >1: faster than real-time, <1: slower than real-time
 SimulationSpeed = 0
 
+[PLANET_SELECTION]
+inertial_frame = J2000
+aberration_correction = NONE
+center_object = EARTH
+num_of_selected_body = 3
+selected_body(0) = EARTH
+selected_body(1) = SUN
+selected_body(2) = MOON
+selected_body(3) = MARS
+
+[FURNSH_PATH]
+TLS  = ../../../ExtLibraries/cspice/generic_kernels/lsk/naif0010.tls
+TPC1 = ../../../ExtLibraries/cspice/generic_kernels/pck/de-403-masses.tpc
+TPC2 = ../../../ExtLibraries/cspice/generic_kernels/pck/gm_de431.tpc
+TPC3 = ../../../ExtLibraries/cspice/generic_kernels/pck/pck00010.tpc
+BSP  = ../../../ExtLibraries/cspice/generic_kernels/spk/planets/de430.bsp
+
+[HIPPARCOS_CATALOGUE]
+catalogue_path = ../../../ExtLibraries/HipparcosCatalogue/hip_main.csv
+max_magnitude = 3.0	
+calculation = DISNABLE
+logging = DISABLE
+
 [RAND]
 //Seed of randam. When this value is 0, the seed will be varied by time.
-Rand_Seed = 0x11223344  
+Rand_Seed = 0x11223344
 
-[ATTITUDE]
-//Attitude propagation step time [sec]
-PropStepSec=0.01
-//initial angular velocity, body frame, [rad/s]
-Omega_b(0) = 0.0
-Omega_b(1) = 0.0
-Omega_b(2) = 0.0
-//initial Quaternion，inertial to body，(real components，imaginary component)
-Quaternion_i2b(0) = 0.0
-Quaternion_i2b(1) = 0.0
-Quaternion_i2b(2) = 0.0
-Quaternion_i2b(3) = 1.0
-//initial torque，body frame，[Nm] 
-Torque_b(0) = +0.000
-Torque_b(1) = -0.000
-Torque_b(2) =  0.000
-//Inertia tensor，body frame，[kg・m2]
-Iner(0) = 0.17	//I(0,0)
-Iner(1) = 0.0	//I(0,1)
-Iner(2) = 0.0	//I(0,2)
-Iner(3) = 0.0	//I(1,0)
-Iner(4) = 0.1	//I(1,1)
-Iner(5) = 0.0	//I(1,2)
-Iner(6) = 0.0	//I(2,0)
-Iner(7) = 0.0	//I(2,1)
-Iner(8) = 0.25	//I(2,2)
-//mass, [kg]
-mass = 10
-
+[SIM_SETTING]
+log_inifile = 1
 //initialize files
 //file name must not over 256 characters (defined in initialize.h as MAX_CHAR_NUM)
-[SIM_SETTING]
-log_file_path  = ../../data/logs/
-orbit_file     = ../../data/ini/User_Orbit.ini
-env_file       = ../../data/ini/User_Environment.ini
-dist_file      = ../../data/ini/User_Disturbance.ini
-celestial_file = ../../data/ini/User_PlanetSelect.ini
-thrm_file = ../../data/ini/Thermal_CSV/
-[COMPONENTS_FILE]
+//If you want to add a spacecraft, create the corresponding Sat.ini, and specify it as sat_file(1), sat_file(2)... . 
+sat_file(0)            = ../../data/ini/UserSat.ini
+log_file_path          = ../../data/logs/
