Fix ini file mistake

--- a/Tutorials/SampleCodes/s2e_user/data/ini/UserSat.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/UserSat.ini
@@ -103,7 +103,7 @@ rmm_rwlimit = 1.0E-3
 rmm_wnvar = 5.0E-5  
 
 [ATTITUDE]
-propagate_mode = 0; //0: RK4, 1: ControlledAttitude
+propagate_mode = 0 //0: RK4, 1: ControlledAttitude
 //Attitude propagation step time [sec]
 PropStepSec=0.001
 //initial angular velocity at body frame，[rad/s]
@@ -186,7 +186,7 @@ PropStepSec_Thermal=0.001 //Thermal Propagation Step time [sec]
 thrm_file = ../../data/ini/Thermal_CSV/
 
 [LOCAL_ENVIRONMENT]
-local_env_file = ../../data/ini/SampleLocalEnvironment.ini
+local_env_file = ../../data/ini/UserSat_LocalEnvironment.ini
 [DISTURBANCE]
-dist_file      = ../../data/ini/SampleDisturbance.ini
+dist_file      = ../../data/ini/UserSat_Disturbance.ini
 [COMPONENTS_FILE]
