--- a/Tutorials/SampleCodes/s2e_user/data/ini/UserSat_LocalEnvironment.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/UserSat_LocalEnvironment.ini
@@ -1,19 +1,18 @@
 [MAG_ENVIRONMENT]
 calculation = ENABLE
 logging = ENABLE
-coeff_file = ../../src/Library/igrf/igrf13.coef
-mag_rwdev = 0.0//10.0     //磁気ランダムウォーク速度[nT] Default(10.0)
-mag_rwlimit = 0.0//400.0  //磁気ランダムウォーク最大値[nT] Default(400.0)
-mag_wnvar = 0.0//50.0     //磁気ホワイトノイズ分散[nT] Default(50.0)
+coeff_file = ../../../S2E_CORE_OSS/src/Library/igrf/igrf13.coef
+mag_rwdev = 10.0     //Random Walk speed[nT] Default(10.0)
+mag_rwlimit = 400.0  //Random Walk max limit[nT] Default(400.0)
+mag_wnvar = 50.0     //White noise standard deviation [nT] Default(50.0)
 
 [SRP]
 calculation = ENABLE
 logging = ENABLE
 
 [ATMOSPHERE]
-// 大気密度モデル　STANDARD->スケールハイトを用いたモデル，NRLMSISE00->NRLMSISE00モデル
-model = NRLMSISE00
+model = NRLMSISE00 //STANDARD or NRLMSISE00
 nrlmsise00_table_path = ../../../ExtLibraries/nrlmsise00/table/SpaceWeather.txt
 calculation = ENABLE
 logging = ENABLE
-rho_stddev = 0.0//0.1  //空気密度標準偏差の割合
+rho_stddev = 0.0//0.1  //Ratio of standard deviation
