Update how to make new scenario for the latest develop

--- a/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
@@ -1,72 +1,98 @@
 [TIME]
-//Simulation start date，[UTC]
-StartYMDHMS=2020/01/01 11:00:00.0
-//Simulation finish time，[sec]
-EndTimeSec=300
-//Simulation step time，[sec]
+// Simulation start date [UTC]
+StartYMDHMS=2020/01/01 12:00:00.0
+
+// Simulation finish time [sec]
+EndTimeSec=200
+
+// Simulation step time [sec]
+// Minimum time step for the entire simulation
 StepTimeSec=0.1
 
-//Attitude Update Period [sec]
-//Attitude is updated at the period specified here 
+// Attitude Update Period [sec]
+// Attitude is updated at the period specified here 
 AttitudeUpdateIntervalSec=0.1 // should be larger than StepTimeSec
-//Attitide Δt for Runge-Kutta method [sec]
-//This must be smaller than "AttitudeUpdateIntervalSec" 
+
+// Attitide Δt for Runge-Kutt method [sec]
+// This must be smaller than "AttitudeUpdateIntervalSec" 
 AttitudeRKStepSec = 0.001
 
-//Orbit Update Period [sec]
-//Orbit is updated at the period specified here
+// Orbit Update Period [sec]
+// Orbit is updated at the period specified here
 OrbitUpdateIntervalSec = 0.1 // should be larger than StepTimeSec
-//Orbit Δt for Runge-Kutta method [sec]
-//This must be smaller than "OrbitUpdateIntervalSec"
-OrbitRKStepSec = 0.1 
-// Currently this value should be same with OrbitUpdateIntervalSec
-// It will be modified
 
-//Thermal Update Period [sec]
-//Thermal is updated at the period specified here
+// Orbit Δt for Runge-Kutta method [sec]
+// This must be smaller than "OrbitUpdateIntervalSec"
+OrbitRKStepSec = 0.1 
+
+// Thermal Update Period [sec]
+// Thermal is updated at the period specified here
 ThermalUpdateIntervalSec = 0.1 // should be larger than StepTimeSec
-//Thermal Δt for Runge-Kutta method [sec]
-//This must be smaller than "ThermalUpdateIntervalSec"
+
+// Thermal Δt for Runge-Kutta method [sec]
+// This must be smaller than "ThermalUpdateIntervalSec"
 ThermalRKStepSec = 0.1
 
-//Component Update Period [sec]
+// Component Update Period [sec]
 CompoUpdateIntervalSec = 0.1 // should be larger than StepTimeSec
-//Log Output Period [sec]
-LogOutPutIntervalSec = 0.5   // should be larger than StepTimeSec
-//Simulation speed. 0: as fast as possible, 1: real-time, >1: faster than real-time, <1: slower than real-time
+
+// Log Output Period [sec]
+LogOutPutIntervalSec = 0.1   // should be larger than StepTimeSec
+
+// Simulation speed
+// 0: as fast as possible, 1: real-time, >1: faster than real-time, <1: slower than real-time
 SimulationSpeed = 0
 
+
 [PLANET_SELECTION]
+// Whether global celestial information is logged or not
+logging = ENABLE
+
+// Definition of Inertial frame
 inertial_frame = J2000
 aberration_correction = NONE
 center_object = EARTH
+
+// Earth Rotation model
+// Idle:no motion，Simple:rotation only，Full:full-dynamics
+rotation_mode = Simple
+
+// Definition of calculation celestial bodies
 num_of_selected_body = 3
 selected_body(0) = EARTH
 selected_body(1) = SUN
 selected_body(2) = MOON
 selected_body(3) = MARS
 
+
 [FURNSH_PATH]
+// CSPICE Kernel files definition
 TLS  = ../../../ExtLibraries/cspice/generic_kernels/lsk/naif0010.tls
 TPC1 = ../../../ExtLibraries/cspice/generic_kernels/pck/de-403-masses.tpc
 TPC2 = ../../../ExtLibraries/cspice/generic_kernels/pck/gm_de431.tpc
 TPC3 = ../../../ExtLibraries/cspice/generic_kernels/pck/pck00010.tpc
 BSP  = ../../../ExtLibraries/cspice/generic_kernels/spk/planets/de430.bsp
 
+
 [HIPPARCOS_CATALOGUE]
 catalogue_path = ../../../ExtLibraries/HipparcosCatalogue/hip_main.csv
-max_magnitude = 3.0	
+max_magnitude = 3.0	// Max magnitude to read from Hip catalog
 calculation = DISNABLE
 logging = DISABLE
 
+
 [RAND]
-//Seed of randam. When this value is 0, the seed will be varied by time.
+// Seed of randam. When this value is 0, the seed will be varied by time.
 Rand_Seed = 0x11223344
 
+
 [SIM_SETTING]
+// Whether the ini files are saved or not
 log_inifile = 1
-//initialize files
-//file name must not over 256 characters (defined in initialize.h as MAX_CHAR_NUM)
-//If you want to add a spacecraft, create the corresponding Sat.ini, and specify it as sat_file(1), sat_file(2)... . 
-sat_file(0)            = ../../data/ini/UserSat.ini
-log_file_path          = ../../data/logs/
+
+// Initialize files
+// File name must not over 256 characters (defined in initialize.h as MAX_CHAR_NUM)
+// If you want to add a spacecraft, create the corresponding Sat.ini, and specify it as sat_file(1), sat_file(2)... . 
+num_of_simulated_spacecraft = 1
+sat_file(0)   = ../../data/ini/UserSat.ini
+log_file_path = ../../data/logs/
