--- a/Tutorials/SampleCodes/s2e_user/data/ini/components/Gyro_xxx.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/components/Gyro_xxx.ini
@@ -1,13 +1,15 @@
 [GYRO]
-//Transformation Quaternion from body frame to component frame
-//Including misalignment
+prescaler = 10
+
+// Transformation Quaternion from body frame to component frame
+// Including misalignment
 q_b2c(0) = 0.0
 q_b2c(1) = 0.0
 q_b2c(2) = 0.0
 q_b2c(3) = 1.0
 
-//Scale Factor matrix(3×3)
-//(0) = (0,0), (1) = (0,1), (2) = (0,2), ....
+// Scale Factor matrix(3×3)
+// (0) = (0,0), (1) = (0,1), (2) = (0,2), ....
 ScaleFactor(0) = 1.0
 ScaleFactor(1) = 0.0
 ScaleFactor(2) = 0.0
@@ -18,18 +20,17 @@ ScaleFactor(6) = 0.0
 ScaleFactor(7) = 0.0
 ScaleFactor(8) = 1.0
 
-//Constant Bias Noise @ component frame[rad/s]
+// Constant Bias Noise @ component frame[rad/s]
 Bias_c(0) = 0.0
 Bias_c(1) = 0.0
 Bias_c(2) = 0.0
 
-//Step width to calculate the random walk noise[s]
-rw_stepwidth = 0.001
-//Random Walk Standard Deviation[rad/s]
+// Random Walk Standard Deviation[rad/s]
 rw_stddev_c(0) = 0.0
 rw_stddev_c(1) = 0.0
 rw_stddev_c(2) = 0.0
-//Random Walk Limit[rad/s]
+
+// Random Walk Limit[rad/s]
 rw_limit_c(0) = 0.0
 rw_limit_c(1) = 0.0
 rw_limit_c(2) = 0.0
@@ -43,6 +44,6 @@ nr_stddev_c(2) = 0.0
 Range_to_const = 5.0  //should be smaller than Range_to_zero
 Range_to_zero = 10.0
 
-//Current [A]
-current = 0.05;
-
+// Power Port
+minimum_voltage = 3.3 // V
+assumed_power_consumption = 1.0 //W
