--- a/Tutorials/SampleCodes/s2e_user/data/ini/UserSat_LocalEnvironment.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/UserSat_LocalEnvironment.ini
@@ -2,17 +2,33 @@
 calculation = ENABLE
 logging = ENABLE
 coeff_file = ../../../S2E_CORE_OSS/src/Library/igrf/igrf13.coef
-mag_rwdev = 10.0     //Random Walk speed[nT] Default(10.0)
-mag_rwlimit = 400.0  //Random Walk max limit[nT] Default(400.0)
-mag_wnvar = 50.0     //White noise standard deviation [nT] Default(50.0)
+mag_rwdev = 10.0     //Random Walk speed[nT]
+mag_rwlimit = 400.0  //Random Walk max limit[nT]
+mag_wnvar = 50.0     //White noise standard deviation [nT]
+
 
 [SRP]
 calculation = ENABLE
 logging = ENABLE
 
+
 [ATMOSPHERE]
-model = NRLMSISE00 //STANDARD or NRLMSISE00
-nrlmsise00_table_path = ../../../ExtLibraries/nrlmsise00/table/SpaceWeather.txt
 calculation = ENABLE
 logging = ENABLE
-rho_stddev = 0.0//0.1  //Ratio of standard deviation
+
+// Atmosphere model
+// STANDARD: Model using scale height, NRLMSISE00: NRLMSISE00 model
+model = STANDARD
+nrlmsise00_table_path = ../../../ExtLibraries/nrlmsise00/table/SpaceWeather.txt
+// Whether using user-defined f10.7 and ap value
+// Ref of f10.7: https://www.swpc.noaa.gov/phenomena/f107-cm-radio-emissions
+// Ref of ap: http://wdc.kugi.kyoto-u.ac.jp/kp/kpexp-j.html
+is_manual_param_used = ENABLE
+manual_daily_f107 = 150.0    // User defined f10.7（1 day） 
+manual_average_f107 = 150.0  // User defined f10.7（30 days average）
+manual_ap = 3.0              // User defined ap
+rho_stddev = 0.0             // Standard deviation of the air density
+
+
+[LOCAL_CELESTIAL_INFORMATION]
+logging = ENABLE
