--- a/Tutorials/SampleCodes/ClockSensor/ClockSensor.ini
+++ b/Tutorials/SampleCodes/ClockSensor/ClockSensor.ini
@@ -1,3 +1,3 @@
 [ClockSensor]
-prescaler = 10    // period = prescaler * base_sec [sec]
-bias_sec = 0.005  // second
+prescaler = 10    // period = prescaler * CompoUpdateIntervalSec [sec]
+bias_sec = 0.005  // [sec]
