--- a/Tutorials/SampleCodes/ControlAlgorithm/ComponentMethod/data/RW_xxx.ini
+++ b/Tutorials/SampleCodes/ControlAlgorithm/ComponentMethod/data/RW_xxx.ini
@@ -1,30 +1,70 @@
 [RW1]
 // prescaler defines update period of thie component
-// update period = prescaler * step sec / 1000.0
-prescaler = 100
-//Inertia of the RW [kgm^2]
+// update period = prescaler * step sec
+prescaler = 1
+
+// Inertia of the RW [kgm^2]
 inertia = 5.0e-6
-//Maximum torque [Nm]
+
+// Maximum torque [Nm]
 max_torque = 0.001
-//Maximum angular velocity [rpm]
-//The RW can drive (-max_angular_velocity,+max_angular_velocity) 
+
+// Maximum angular velocity [rpm]
+// The RW can drive (-max_angular_velocity,+max_angular_velocity) 
 max_angular_velocity = 6000.0
+
+// How to determine the direction of RW (DIRECTION or QUATERNION)
+// If you want to consider the phase of RW strictly (e.g. RW jitter), specify QUATERNION.
+// If you do not need to consider the phase of the RW rotation, specify DIRECTION.
+direction_determination_mode = DIRECTION
+
+// Quaternion from body frame to component frame
+// Definition of component frame : wheel rotation axis = (0 0 1)^T. plus means direction of rotation (output torque is minus direction) 
+q_b2c(0) = 0
+q_b2c(1) = 0.70710678118
+q_b2c(2) = 0
+q_b2c(3) = 0.70710678118
+
 // Direction of axis of the RW at the body fixied frame
-// plus means direction of rotation (output torque is minus direction)
+// plus means direction of rotation (output torque is minus direction) 
 direction_b(0) = 1.0
 direction_b(1) = 0.0
 direction_b(2) = 0.0
-//The control deray[s]
+
+// Position of RW at body frame [m]
+pos_b(0) = 1.0
+pos_b(1) = 0.0
+pos_b(2) = 0.0
+
+// The control deray[s]
 dead_time = 0.1
-//Coefficient of first order lag for driving case
+
+// Coefficient of first order lag for driving case
 firstorder_lag_coef(0) = 2.0
 firstorder_lag_coef(1) = 0.0
 firstorder_lag_coef(2) = 0.0
-//Coefficient of first order lag for coasting case
+
+// Coefficient of first order lag for coasting case
 coasting_lag_coef(0) = 2.0
 coasting_lag_coef(1) = 0.0
 coasting_lag_coef(2) = 0.0
-//For drive initialize
-//They should be zero for normal case
+
+// For drive initialize
+// They should be zero for normal case
 motor_drive_init = 0
 angular_velocity_init = 0.0
+
+// Parameters for calculate RW jitter
+jitter_calculation = DISABLE
+jitter_logging = DISABLE
+radial_force_harmonics_coef_path = ../../data/SampleSat/ini/component/RWDisturbance/radial_force_harmonics_coef.csv
+radial_torque_harmonics_coef_path = ../../data/SampleSat/ini/component/RWDisturbance/radial_torque_harmonics_coef.csv
+harmonics_degree = 12
+considers_structural_resonance = DISABLE
+structural_resonance_freq = 585.0 //[Hz]
+damping_factor = 0.1
+bandwidth = 0.001
+
+// Power Port
+minimum_voltage = 3.3 // V
+assumed_power_consumption = 1.0 //W
