--- a/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
+++ b/Tutorials/SampleCodes/s2e_user/data/ini/User_SimBase.ini
@@ -77,7 +77,7 @@ BSP  = ../../../ExtLibraries/cspice/generic_kernels/spk/planets/de430.bsp
 [HIPPARCOS_CATALOGUE]
 catalogue_path = ../../../ExtLibraries/HipparcosCatalogue/hip_main.csv
 max_magnitude = 3.0	// Max magnitude to read from Hip catalog
-calculation = DISNABLE
+calculation = DISABLE
 logging = DISABLE
 
 
