fix push to gh-pages with force(no-history)

--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -43,4 +43,4 @@ jobs:
       - name: deploy
         working-directory: ./gh-pages
         run: |
-          git push origin gh-pages
+          git push -f origin gh-pages
