--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -41,6 +41,7 @@ jobs:
           git commit -m "Deploy $GITHUB_SHA to gh-pages"
 
       - name: deploy
+        if: ${{ github.ref == 'refs/heads/main' }}
         working-directory: ./gh-pages
         run: |
           git push -f origin gh-pages
