Modify MCSim for v5.0.0

--- a/Tutorials/SampleCodes/MCSim/UserSimBase.ini
+++ b/Tutorials/SampleCodes/MCSim/UserSimBase.ini
@@ -74,25 +74,17 @@ TPC3 = ../../../ExtLibraries/cspice/generic_kernels/pck/pck00010.tpc
 BSP  = ../../../ExtLibraries/cspice/generic_kernels/spk/planets/de430.bsp
 
 
-[HIPPARCOS_CATALOGUE]
-catalogue_path = ../../../ExtLibraries/HipparcosCatalogue/hip_main.csv
-max_magnitude = 3.0	// Max magnitude to read from Hip catalog
-calculation = DISNABLE
-logging = DISABLE
-
-
 [MC_EXECUTION]
 // ENABLED or DISABLED
-MCSimEnabled = DISABLED
+MCSimEnabled = ENABLED
 
 // When LogHistory=ENABLED, a default csv log file is outputted for each sample case.
 // Note: When MCSimEnabled=ENABLED, a default csv log file will always be generated.
-LogHistory = DISABLED
+LogHistory = ENABLED
 
 // Number of Monte Carlo executions
 // The total calculation time is proportional with this value
 NumOfExecutions = 5
-
 
 [MC_RANDOMIZATION]
 Param(0) = ATTITUDE0.Omega_b
@@ -103,6 +95,13 @@ ATTITUDE0.Omega_b.mean_or_min(2) = 0.0
 ATTITUDE0.Omega_b.sigma_or_max(0) = 0.05
 ATTITUDE0.Omega_b.sigma_or_max(1) = 0.05
 ATTITUDE0.Omega_b.sigma_or_max(2) = 0.05
+
+
+[HIPPARCOS_CATALOGUE]
+catalogue_path = ../../../ExtLibraries/HipparcosCatalogue/hip_main.csv
+max_magnitude = 3.0	// Max magnitude to read from Hip catalog
+calculation = DISABLE
+logging = DISABLE
 
 
 [RAND]
