fix small refrecting reviews

--- a/Tutorials/SampleCodes/MultipleSatellites/data/UserSat1Disturbance.ini
+++ b/Tutorials/SampleCodes/MultipleSatellites/data/UserSat1Disturbance.ini
@@ -35,7 +35,7 @@ calculation = DISABLE
 logging = ENABLE
 // The number of gravity-generating bodies other than the central body
 num_of_third_body = 1
-// ist of gravity-generating bodies other than the central body
+// List of gravity-generating bodies other than the central body
 // All these bodies must be included in the "selected_body" of "PlanetSelect.ini"
 third_body(0) = SUN
 third_body(1) = MOON
